[workspace]

resolver = "2"

members = [
    "csc_engine",
    "csc_ui",
    "csc_core",
]

[package]
name = "cascade"
version = "0.1.0"
edition = "2021"

[dependencies]
csc_ui = { path = "csc_ui" }
csc_engine = { path = "csc_engine" }
csc_core = { path = "csc_core" }
ahash = "0.8.3"
anyhow = { workspace = true }
egui_winit_vulkano = { workspace = true }
egui_node_graph = { workspace = true }
vulkano = { workspace = true }
vulkano-util = { workspace = true }
winit = { workspace = true }

[workspace.dependencies]
egui = "0.24.1"
ecolor = "0.24.1"
egui-winit = "0.24.1"
winit = "0.28.2"
egui_winit_vulkano = "0.27.0"
vulkano = "0.34.1"
vulkano-util = "0.34.1"
egui_node_graph = { path = "../egui_node_graph/egui_node_graph"}
egui_file = "0.13.0"
egui_dock = { git="https://github.com/Adanos020/egui_dock", rev="fae7fbc9483ed62fd982c88201a7f8f1b4563559" }
anyhow = "1.0"
cgmath = "0.18.0"