[workspace]

resolver = "2"

members = [
    "cas_graph",
]

[package]
name = "cascade"
version = "0.1.0"
edition = "2021"

[dependencies]
cas_graph = { path = "cas_graph" }

egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
petgraph = { workspace = true }

[workspace.dependencies]
egui = "0.31.1"
egui-wgpu = { version = "0.31.1",features = ["winit"] }
egui-winit = "0.31.1"
winit = "0.30.9"
pollster = "0.4.0"
petgraph = "0.8.1"