[package]
name = "csc_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
csc_core = { path = "../csc_core" }
egui = "0.23.0"
ecolor = "0.23.0"
anyhow = "1.0"
serde = { version = "1.0", optional = true }

egui_node_graph = { git = "https://github.com/ttddee/egui_node_graph", rev ="b8a68830" }

[features]
#default = []
#persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]