[package]
name = "csc_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
csc_core = { path = "../csc_core" }
egui = "0.23.0"
ecolor = "0.23.0"
anyhow = "1.0"
serde = { version = "1.0", optional = true }

#egui_node_graph = { git = "https://github.com/ttddee/egui_node_graph", rev ="b8a68830" }
egui_node_graph = { path = "../../egui_node_graph/egui_node_graph" }

[features]
#default = []
#persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]