[package]
name = "csc_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
csc_core = { path = "../csc_core" }
egui = { workspace = true }
ecolor = { workspace = true }
anyhow = { workspace = true }
egui_node_graph = { workspace = true }
egui_file = { workspace = true }

serde = { version = "1.0", optional = true }
